--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Showcase - Personal Portfolio One Page Bulma Theme</title>
     <!-- Bulma Version 0.9.0-->
-    <link rel="stylesheet" href="./node_modules/bulma/css/bulma.min.css" />
-    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <link rel="stylesheet" href="/node_modules/bulma/css/bulma.min.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <script
       src="https://kit.fontawesome.com/2828f7885a.js"
       integrity="sha384-WAsFbnLEQcpCk8lM1UTWesAf5rGTCvb2Y+8LvyjAAcxK1c3s5c0L+SYOgxvc6PWG"
@@ -160,7 +160,7 @@
             <div class="column is-6 right-image " data-aos="fade-left">
               <img
                 class="is-rounded"
-                src="./self.jpg"
+                src="self.jpg"
                 alt=""
               />
             </div>
@@ -322,7 +322,7 @@
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script>
