--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Showcase - Personal Portfolio One Page Bulma Theme</title>
     <!-- Bulma Version 0.9.0-->
-    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
+    <link rel="stylesheet" href="bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script
       src="https://kit.fontawesome.com/2828f7885a.js"
