Information and design updates

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
               data-aos="fade-right"
             >
               <p class="is-larger">
-                I am an undergraduate student at the University of Calgary currently pursuing
-                a Bachelor of Science in Computer Science. My main skills include MySQL, Python,
-                Java, and C++ and have internship experience with database and systems administration.
+                I am an gradutate of the University of Calgary with a Bachelor of Science in Computer Science. 
+                My main skills include MySQL, Python, Java, and C++ and have work experience 
+                with software development, databases and systems administration.
               </p>
               <br />
               <div class="is-divider"></div>
@@ -206,6 +206,18 @@
                 <br>
                 <br>
                 <a href="https://github.com/json-h/json-h.github.io" class="button is-primary"><i class="fab fa-github" style="margin-right: 0.3em;"></i>
+                  Github</a>
+              </div>
+            </div>
+            <div class="column is-6">
+              <div class="box has-text-centered">
+                <img src="media/minimapcv.png">
+                <p style="color:white;"> 
+                A tool to analyze positions of players in a League of Legends game using the minimap. Written using Python and OpenCV.
+                </p>
+                <br>
+                <br>
+                <a href="https://github.com/json-h/MinimapCV-League" class="button is-primary"><i class="fab fa-github" style="margin-right: 0.3em;"></i>
                   Github</a>
               </div>
             </div>
